--- a/style.css
+++ b/style.css
@@ -9,14 +9,10 @@ body {
 	
 	
 .shadow {
-	box-shadow:black 0px 5px 20px;
+	box-shadow:black 0px 9px 40px;
     position: relative;
 	}
 
-.content{
-    padding: 0.5em .5em 0.5em;
-    color:#FFFFFF;
- }
 
 .scanlines {
   overflow: hidden;
@@ -25,7 +21,7 @@ body {
 .scanlines::before {
   content: "";
   position: absolute;
-  width:  100%;
+  width:  200%;
   height: 200%;
   top:   -100%;
   left:     0;
@@ -47,14 +43,14 @@ body {
 .scan-line::before {
   content: "";
   position: absolute;
-  width: 100%;
+  width: 110%;
   height: 100px;
+  right: 0;
   z-index: 8;
   background: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%,
     rgba(255, 255, 255, 0.2) 10%,
     rgba(0, 0, 0, 0.1) 100%);
-  opacity: 0.1;
-  position: absolute;
+  opacity: 0.12;
   bottom: 100%;
   pointer-events: none;
   animation: scan-line 8s linear infinite;
